# adblock-lists-mirror

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  renovate.json  requirements.txt  update-lists.py
.github/: CODEOWNERS  settings.yml
.github/workflows/: build-page.yml  lint-and-test-lists.yml  update-lists.yml
lists/: metadata.json
site/: create_db.py  index.html  package-lock.json  package.json  search.js  webpack.config.cjs
