[project]
name = "adblock-lists-mirror"
version = "0.1.0"
description = "Tool to download and mirror adblock lists"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.15",
    "aiohttp-retry==2.9.1",
    "sentry-sdk[aiohttp]==2.35.2",
]
[tool.uv]
required-version = "==0.9.4"

[dependency-groups]
dev = [
    "ruff==0.14.4",
]
